<resources>
    <string name="app_name">VirLibrary</string>
    <string name="navigation_drawer_open">Ouvrir le menu de naviguation</string>
    <string name="navigation_drawer_close">Fermer le menu de naviguation</string>
    <string name="action_settings">Paramètre</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion ou Inscription</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Cette email est invalide.</string>
    <string name="error_invalid_password">Le mot de passe est trop court.</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect.</string>
    <string name="error_field_required">Ce champs est requis.</string>
    <string name="permission_rationale">"L'autorisation des contacts est nécessaire pour envoyé un email."
    </string>
    <string name="title_activity_settings">Paramètre</string>
    <string name="pref_header_general">Général</string>
    <string name="pref_livre_titre">Gestion de vos livres</string>
    <string name="pref_livre_titre_partage">Partage de vos livres</string>
    <string-array name="livre_pref_manage">
        <item>Toujours</item>
        <item>Parfois</item>
        <item>Jamais</item>
    </string-array>
    <string name="livre_pref_repartager">Authorisé le partage par d\'autre utilisateur</string>
    <string name="pref_livre_duree_max">Durée maximum d\'un prêt</string>
    <string-array name="pref_livre_duree_titles">
        <item>1 jour</item>
        <item>2 jours</item>
        <item>3 jours</item>
        <item>4 jours</item>
        <item>5 jours</item>
        <item>6 jours</item>
        <item>1 semaine</item>
        <item>2 semaines</item>
        <item>3 semaines</item>
    </string-array>
    <string-array name="pref_livre_duree_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>14</item>
        <item>21</item>
    </string-array>
    <string name="pref_livre_text_partage">Vous souhaitez que vos livre puissent être partagé.</string>
    <string name="pref_title_social_recommendations">Activer recommandation social</string>
    <string name="pref_description_social_recommendations">Recommandations pour les personnes à contacte en fonction de votre historique des messages
    </string>
    <string name="pref_title_display_name">Compte connecté</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Ajouter des amis aux messages</string>
    <string-array name="pref_example_list_titles">
        <item>Toujours</item>
        <item>"Quand c'est possible"</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Synchronisation des données</string>
    <string name="pref_title_sync_frequency">Fréquence de synchronisation</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
        <item>3 heures</item>
        <item>6 heures</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">Paramètres de synchronisation du système</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Nouveau message de notifications</string>
    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="pref_ringtone_silent">Silencieux</string>
    <string name="pref_title_vibrate">Vibration</string>
    <string name="title_activity_scrolling">Biblihotèque</string>
    <string name="username_activity_inscription">Pseudo</string>
    <string name="nom_activity_inscription">Nom</string>
    <string name="prenom_activity_inscription">Prénom</string>
    <string name="email_activity_inscription">Email</string>
    <string name="mdp_activity_inscription">Mot de passe</string>
    <string name="inscription_bouton_suivant">Suivant</string>
    <string name="inscription_bouton_annuler">Annuler</string>
    <string name="titre_livre_activty_nouveau_livre">Titre</string>
    <string name="date_parution_livre_activty_nouveau_livre">Date de parution</string>
    <string name="langue_livre_activty_nouveau_livre">Langue</string>
    <string name="edition_livre_activty_nouveau_livre">Édition</string>
    <string name="resume_livre_activty_nouveau_livre">Résumé du livre</string>
    <string name="prix_livre_activty_nouveau_livre">Prix du livre</string>
    <string name="devise_livre_activty_nouveau_livre">Devise du prix</string>
    <string name="ISBN_activity_nouveau_livre2">ISBN du livre</string>
    <string name="nomAuteurNouveauLivre">Auteur</string>
    <string name="date_debut_emprunt_vue_livre">Date de début d\'emprunt</string>
    <string name="date_fin_emprunt_vue_livre">Date de fin d\'emprunt</string>
    <string name="emprunt_accepte_emprunt_fragment">Accepté</string>
    <string name="txtview_emprunt_accepte">Emprunt accepté</string>
    <string name="txtview_preteur_emprunt_fragment">Preteur</string>
    <string name="txtview_date_peremption_carte_banquaire_fragment">Date de péremption</string>
    <string name="txtview_num_compte_carte_banquaire_fragment">Numéro de compte</string>
    <string name="txtview_proprio_carte_banquaire_fragment">Propriétaire</string>
    <string name="txtview_iban_compte_banquaire_fragment">IBAN</string>
    <string name="txtview_type_carte_coordonne_bancaire">Type de Carte Bancaire</string>
    <string name="txtview_code_secu_coord_bancaire">Code de sécurité</string>
</resources>