<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp"
style="@style/Transparent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_proprio_carte_banquaire_fragment"
        android:id="@+id/textViewProprioCarteBanquaireFragment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_num_compte_carte_banquaire_fragment"
        android:layout_below="@+id/textViewProprioCarteBanquaireFragment"
        android:id="@+id/textViewNumCompteCarteBanquaireFragment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_date_peremption_carte_banquaire_fragment"
        android:layout_below="@+id/textViewNumCompteCarteBanquaireFragment"
        android:id="@+id/textViewDateCarteBanquaireFragment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_type_carte_coordonne_bancaire"
        android:id="@+id/textViewTypeCarteBancaireCoordBancaire"
        android:layout_alignTop="@+id/textViewProprioCarteBanquaireFragment"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_code_secu_coord_bancaire"
        android:id="@+id/textViewCodeSecuCoordBancaire"
        android:layout_below="@+id/textViewDateCarteBanquaireFragment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonSupprimerCarteCoordCarte"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        style="@style/boutonB"
        android:layout_alignBottom="@+id/textViewCodeSecuCoordBancaire"
        android:layout_alignRight="@+id/textViewTypeCarteBancaireCoordBancaire"
        android:layout_alignEnd="@+id/textViewTypeCarteBancaireCoordBancaire" />

</RelativeLayout>
