<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="universitblaisepascal.virlibrary.NouveauLivreActivity"
    tools:showIn="@layout/activity_nouveau_livre">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputTitreNouveauLivre"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/titre_livre_activty_nouveau_livre"
        android:textAlignment="center"
        android:maxLines="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputDateParutionNouveauLivre"
        android:layout_below="@+id/inputTitreNouveauLivre"
        android:layout_alignRight="@+id/inputTitreNouveauLivre"
        android:layout_alignEnd="@+id/inputTitreNouveauLivre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/date_parution_livre_activty_nouveau_livre"
        android:textAlignment="center"
        android:maxLines="1"
        android:inputType="date"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputLangueNouveauLivre"
        android:layout_below="@+id/inputDateParutionNouveauLivre"
        android:textAlignment="center"
        android:maxLines="1"
        android:hint="@string/langue_livre_activty_nouveau_livre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputEditionNouveauLivre"
        android:layout_below="@+id/inputLangueNouveauLivre"
        android:layout_alignRight="@+id/inputLangueNouveauLivre"
        android:layout_alignEnd="@+id/inputLangueNouveauLivre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:textAlignment="center"
        android:hint="@string/edition_livre_activty_nouveau_livre"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/inputResumeNouveauLivre"
        android:layout_below="@+id/inputEditionNouveauLivre"
        android:hint="@string/resume_livre_activty_nouveau_livre"
        android:textAlignment="center"
        android:layout_alignRight="@+id/inputEditionNouveauLivre"
        android:layout_alignEnd="@+id/inputEditionNouveauLivre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/inputPrixNouveauLivre"
        android:layout_below="@+id/inputResumeNouveauLivre"
        android:hint="@string/prix_livre_activty_nouveau_livre"
        android:maxLines="1"
        android:numeric="integer|decimal"
        android:textAlignment="center"
        android:layout_alignRight="@+id/inputResumeNouveauLivre"
        android:layout_alignEnd="@+id/inputResumeNouveauLivre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number"
        android:theme="@style/textCellule" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSuivantNouveauLivre"
        android:hint="@string/inscription_bouton_suivant"
        android:textAlignment="center"
        android:layout_below="@+id/inputAuteurInscription"
        android:layout_alignRight="@+id/inputAuteurInscription"
        android:layout_alignEnd="@+id/inputAuteurInscription"
        android:layout_marginTop="30dp"
        android:theme="@style/boutonB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAnnulerNouveauLivre"
        android:layout_alignTop="@+id/buttonSuivantNouveauLivre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:hint="@string/inscription_bouton_annuler"
        android:textColor="@color/colorWhite"
        android:theme="@style/boutonB" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputDeviseNouveauLivre"
        android:layout_below="@+id/inputPrixNouveauLivre"
        android:layout_alignRight="@+id/inputPrixNouveauLivre"
        android:layout_alignEnd="@+id/inputPrixNouveauLivre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/devise_livre_activty_nouveau_livre"
        android:textAlignment="center"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputAuteurInscription"
        android:layout_below="@+id/inputDeviseNouveauLivre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/inputDeviseNouveauLivre"
        android:layout_alignEnd="@+id/inputDeviseNouveauLivre"
        android:textAlignment="center"
        android:hint="@string/nomAuteurNouveauLivre" />

</RelativeLayout>
