<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="universitblaisepascal.virlibrary.InscriptionActivity"
    tools:showIn="@layout/activity_inscription">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputPseudoInscription"
        android:textAlignment="center"
        android:hint="@string/username_activity_inscription"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:layout_alignRight="@+id/buttonSuivantInscription"
        android:layout_alignEnd="@+id/buttonSuivantInscription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputNomInscription"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/nom_activity_inscription"
        android:layout_below="@+id/inputPseudoInscription"
        android:layout_alignLeft="@+id/inputPseudoInscription"
        android:layout_alignStart="@+id/inputPseudoInscription"
        android:layout_alignRight="@+id/inputPseudoInscription"
        android:layout_alignEnd="@+id/inputPseudoInscription"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputPrenomInscription"
        android:textAlignment="center"
        android:hint="@string/prenom_activity_inscription"
        android:layout_below="@+id/inputNomInscription"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/inputNomInscription"
        android:layout_alignEnd="@+id/inputNomInscription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@style/textCellule" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/inputEmailInscription"
        android:hint="@string/email_activity_inscription"
        android:textAlignment="center"
        android:layout_below="@+id/inputPrenomInscription"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/inputPrenomInscription"
        android:layout_alignEnd="@+id/inputPrenomInscription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@style/textCellule" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription_bouton_annuler"
        android:id="@+id/buttonAnnulerInscription"
        android:layout_below="@+id/inputMdpInscription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:theme="@style/boutonB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription_bouton_suivant"
        android:id="@+id/buttonSuivantInscription"
        android:layout_below="@+id/inputMdpInscription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:theme="@style/boutonB" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/inputMdpInscription"
        android:hint="@string/mdp_activity_inscription"
        android:textAlignment="center"
        android:layout_below="@+id/inputEmailInscription"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/inputEmailInscription"
        android:layout_alignEnd="@+id/inputEmailInscription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@style/textCellule" />

</RelativeLayout>
